--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "style-loader": "^3.2.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "jest": "^27.0.6",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
