--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,9 @@
 {
-    "singleQuote": true,
-    "arrowParens": "avoid"
-}
+    "useTabs": false, 
+    "printWidth": 100, 
+    "tabWidth": 2, 
+    "singleQuote": true, 
+    "trailingComma": "es5", 
+    "jsxBracketSameLine": false, 
+    "parser": "flow"
+  }
