--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "sass": "^1.39.0",
     "style-loader": "^3.2.1",
     "yup": "^0.32.9"
   },
