--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.39.0",
     "style-loader": "^3.2.1",
     "yup": "^0.32.9"
   },
@@ -47,7 +46,9 @@
     "file-loader": "^6.2.0",
     "jest": "^27.0.6",
     "prettier": "2.3.2",
-    "webpack": "^5.41.1",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
+    "webpack": "^5.52.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
