--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "reactjs-popup": "^2.0.5",
     "style-loader": "^3.2.1",
     "yup": "^0.32.9"
   },
