--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "npm": "^7.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "reactjs-popup": "^2.0.5",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.2.1",
     "yup": "^0.32.9"
   },
