--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,10 @@
 {
     "useTabs": false, 
-    "printWidth": 100, 
+    "printWidth": 80, 
     "tabWidth": 2, 
     "singleQuote": true, 
     "trailingComma": "es5", 
     "jsxBracketSameLine": false, 
-    "parser": "flow"
+    "parser": "flow",
+    "semi": false
   }
