--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:watch": "jest --watch",
     "start": "webpack serve --mode development",
     "build": "webpack build --mode production",
-    "lint": "eslint ./src/*"
+    "lint": "eslint ./src/*",
+    "prettier" : "prettier"
   },
   "repository": {
     "type": "git",
