--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack build --mode production",
     "lint": "eslint ./src/*",
-    "prettier" : "prettier"
+    "prettier": "prettier"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.2.0",
     "reactjs-popup": "^2.0.5",
     "redux": "^4.1.1",
