--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "formik": "^2.2.9",
     "install": "^0.13.0",
+    "moment": "^2.29.1",
     "npm": "^7.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
